--- a/site/index.html
+++ b/site/index.html
@@ -5,8 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hello World</title>
+  <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body>
-  Hello world
+  <h1 class="text-4xl text-bold text-center text-blue-500">Hello world</h1>
 </body>
 </html>
